@@ -1,9 +1,10 @@
 package tech.zeta.mavericks.digital_insurance_management_system.service;
 
 import jakarta.transaction.Transactional;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import tech.zeta.mavericks.digital_insurance_management_system.dto.request.MessageRequest;
 import tech.zeta.mavericks.digital_insurance_management_system.dto.request.SupportTicketRequest;
 import tech.zeta.mavericks.digital_insurance_management_system.dto.request.SupportTicketUpdate;
@@ -14,19 +15,22 @@ import tech.zeta.mavericks.digital_insurance_management_system.exception.PolicyN
 import tech.zeta.mavericks.digital_insurance_management_system.exception.TicketNotFoundException;
 import tech.zeta.mavericks.digital_insurance_management_system.exception.UserNotFoundException;
 import tech.zeta.mavericks.digital_insurance_management_system.entity.*;
-import tech.zeta.mavericks.digital_insurance_management_system.repository.ClaimRepository;
-import tech.zeta.mavericks.digital_insurance_management_system.repository.PolicyRepository;
-import tech.zeta.mavericks.digital_insurance_management_system.repository.SupportTicketRepository;
-import tech.zeta.mavericks.digital_insurance_management_system.repository.UserRepository;
 import tech.zeta.mavericks.digital_insurance_management_system.enums.TicketStatus;
+import tech.zeta.mavericks.digital_insurance_management_system.repository.*;
 
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
+/**
+ * Service for managing support tickets.
+ * Handles ticket creation, updates, messaging, and retrieval.
+ */
 @Service
 public class SupportTicketService {
+
+    private static final Logger logger = LoggerFactory.getLogger(SupportTicketService.class);
 
     @Autowired
     private SupportTicketRepository supportTicketRepository;
@@ -40,20 +44,37 @@ public class SupportTicketService {
     @Autowired
     private ClaimRepository claimRepository;
 
+    /**
+     * Creates a new support ticket.
+     *
+     * @param requestDTO the support ticket request data
+     * @return the saved support ticket as a DTO
+     */
     public SupportTicketResponse createSupportTicket(SupportTicketRequest requestDTO) {
+        logger.info("Creating support ticket for user ID: {}", requestDTO.getUserId());
+
         User user = userRepository.findById(requestDTO.getUserId())
-                .orElseThrow(() -> new UserNotFoundException("User not found with id: " + requestDTO.getUserId()));
+                .orElseThrow(() -> {
+                    logger.warn("User not found with ID: {}", requestDTO.getUserId());
+                    return new UserNotFoundException("User not found with id: " + requestDTO.getUserId());
+                });
 
         Policy policy = null;
         if (requestDTO.getPolicyId() != null) {
             policy = policyRepository.findById(requestDTO.getPolicyId())
-                    .orElseThrow(() -> new PolicyNotFoundException("Policy not found with id: " + requestDTO.getPolicyId()));
+                    .orElseThrow(() -> {
+                        logger.warn("Policy not found with ID: {}", requestDTO.getPolicyId());
+                        return new PolicyNotFoundException("Policy not found with id: " + requestDTO.getPolicyId());
+                    });
         }
 
         Claim claim = null;
         if (requestDTO.getClaimId() != null) {
             claim = claimRepository.findById(requestDTO.getClaimId())
-                    .orElseThrow(() -> new ClaimNotFoundException("Claim not found with id: " + requestDTO.getClaimId()));
+                    .orElseThrow(() -> {
+                        logger.warn("Claim not found with ID: {}", requestDTO.getClaimId());
+                        return new ClaimNotFoundException("Claim not found with id: " + requestDTO.getClaimId());
+                    });
         }
 
         SupportTicket ticket = new SupportTicket();
@@ -66,49 +87,68 @@ public class SupportTicketService {
         ticket.setCreatedAt(Timestamp.valueOf(LocalDateTime.now()));
 
         SupportTicket saved = supportTicketRepository.save(ticket);
+        logger.info("Support ticket created with ID: {}", saved.getId());
 
         return mapToResponseDTO(saved);
     }
 
     /**
-     * Get all tickets for the admin
+     * Retrieves all support tickets.
+     *
+     * @return list of all support tickets as DTOs
      */
     public List<SupportTicketResponse> getAllTickets() {
-        List<SupportTicket> tickets = supportTicketRepository.findAll().stream()
-                .collect(Collectors.toList());
-
-        return tickets.stream()
+        logger.info("Fetching all support tickets");
+        return supportTicketRepository.findAll().stream()
                 .map(this::mapToResponseDTO)
                 .collect(Collectors.toList());
     }
 
     /**
-     * Get all tickets submitted by a user
+     * Retrieves all tickets submitted by a specific user.
+     *
+     * @param userId the user's ID
+     * @return list of user's tickets as DTOs
      */
     public List<SupportTicketResponse> getTicketsByUserId(Long userId) {
-        List<SupportTicket> tickets = supportTicketRepository.findAll().stream()
+        logger.info("Fetching tickets for user ID: {}", userId);
+        return supportTicketRepository.findAll().stream()
                 .filter(ticket -> ticket.getUser().getId().equals(userId))
-                .collect(Collectors.toList());
-
-        return tickets.stream()
                 .map(this::mapToResponseDTO)
                 .collect(Collectors.toList());
     }
 
+    /**
+     * Retrieves a single ticket by its ID.
+     *
+     * @param ticketId the ticket's ID
+     * @return the ticket as a DTO
+     */
     public SupportTicketResponse getTicketByTicketId(Long ticketId) {
+        logger.info("Fetching ticket with ID: {}", ticketId);
         SupportTicket ticket = supportTicketRepository.findById(ticketId)
-                .orElseThrow(() -> new TicketNotFoundException("Ticket not found with id: " + ticketId));
-
+                .orElseThrow(() -> {
+                    logger.warn("Ticket not found with ID: {}", ticketId);
+                    return new TicketNotFoundException("Ticket not found with id: " + ticketId);
+                });
         return mapToResponseDTO(ticket);
     }
 
     /**
-     * Update ticket with admin response and status
+     * Updates a support ticket with new data.
+     *
+     * @param ticketId  the ticket ID
+     * @param updateDTO the update data
+     * @return updated ticket as a DTO
      */
     @Transactional
     public SupportTicketResponse updateSupportTicket(Long ticketId, SupportTicketUpdate updateDTO) {
+        logger.info("Updating ticket with ID: {}", ticketId);
         SupportTicket ticket = supportTicketRepository.findById(ticketId)
-                .orElseThrow(() -> new TicketNotFoundException("Ticket not found with id: " + ticketId));
+                .orElseThrow(() -> {
+                    logger.warn("Ticket not found with ID: {}", ticketId);
+                    return new TicketNotFoundException("Ticket not found with id: " + ticketId);
+                });
 
         if (updateDTO.getSubject() != null) ticket.setSubject(updateDTO.getSubject());
         if (updateDTO.getDescription() != null) ticket.setDescription(updateDTO.getDescription());
@@ -134,11 +174,21 @@ public class SupportTicketService {
         }
 
         SupportTicket updated = supportTicketRepository.save(ticket);
+        logger.info("Ticket updated with ID: {}", ticketId);
+
         return mapToResponseDTO(updated);
     }
 
-
+    /**
+     * Adds a message to a ticket.
+     *
+     * @param ticketId the ticket ID
+     * @param request  the message request
+     * @return the saved message as a DTO
+     */
     public MessageResponse addMessage(Long ticketId, MessageRequest request) {
+        logger.info("Adding message to ticket ID: {}", ticketId);
+
         SupportTicket ticket = supportTicketRepository.findById(ticketId)
                 .orElseThrow(() -> new TicketNotFoundException("Ticket not found with id: " + ticketId));
 
@@ -154,6 +204,8 @@ public class SupportTicketService {
         ticket.getResponses().add(message);
         supportTicketRepository.save(ticket);
 
+        logger.info("Message added to ticket ID: {}", ticketId);
+
         return new MessageResponse(
                 message.getId(),
                 author.getId(),
@@ -163,7 +215,10 @@ public class SupportTicketService {
     }
 
     /**
-     * Mapper: Entity → DTO
+     * Maps a SupportTicket entity to a SupportTicketResponse DTO.
+     *
+     * @param ticket the SupportTicket entity
+     * @return the SupportTicketResponse DTO
      */
     private SupportTicketResponse mapToResponseDTO(SupportTicket ticket) {
         SupportTicketResponse dto = new SupportTicketResponse();
@@ -177,20 +232,16 @@ public class SupportTicketService {
         dto.setCreatedAt(ticket.getCreatedAt());
         dto.setResolvedAt(ticket.getResolvedAt());
 
-        // map messages
-        List<MessageResponse> messages = ticket.getResponses().stream().map(m -> {
-            MessageResponse messageResponse = new MessageResponse();
-            messageResponse.setId(m.getId());
-            messageResponse.setAuthorId(m.getAuthor().getId());
-            messageResponse.setContent(m.getContent());
-            messageResponse.setTimestamp(m.getTimestamp());
-            return messageResponse;
-        }).toList();
+        List<MessageResponse> messages = ticket.getResponses().stream()
+                .map(m -> new MessageResponse(
+                        m.getId(),
+                        m.getAuthor().getId(),
+                        m.getContent(),
+                        m.getTimestamp()
+                ))
+                .collect(Collectors.toList());
 
         dto.setMessages(messages);
-
         return dto;
     }
-
 }
-
